# imageboard

./: .gitignore  README.md  app.py  database.py  db.py  pyproject.toml  requirements.txt  routes.py  schema.sql
app/: __init__.py  routes.py
app/static/css/: register.css  sign.css  style.css
app/templates/: register.html  skeleton.html
repositories/: database.py  schema.sql
static/css/: login.css  register.css  sign.css  skeleton.css  style.css  styles.css
static/icons/: Notification - sajinboard.html
static/icons/Notification - sajinboard_files/: styles.css
static/js/: action_check.js  create_acc_check.js
templates/: category.html  create_acc.html  index.html  login.html  login_error.html  my_profile.html  my_uploads.html  notification.html  random_image.html  register.html  search.html  show_image.html  skeleton.html  upload.html  user_list.html
