[tool.poetry]
name = "sajinboard"
version = "0.1.0"
description = ""
authors = ["Oskar Sjölund <oskar.sjolund93@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pylint = "^2.12.2"
coverage = "^6.2"
autopep8 = "^1.6.0"
pytest = "^6.2.5"
invoke = "^1.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
